/*
 * time_window_leaderboard.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record;
import "google/protobuf/descriptor.proto";

option java_outer_classname = "TimeWindowLeaderboardProto";

message TimeWindowLeaderboardDirectory {
  optional uint64 update_timestamp = 1;
  optional bool high_score_first = 2;
  optional uint32 next_key = 3;
  repeated TimeWindowLeaderboard leaderboards = 4;
}

message TimeWindowLeaderboardSubDirectory {
  optional bool high_score_first = 1;
}

message TimeWindowLeaderboard {
   optional uint32 type = 1;
   optional uint64 start_timestamp = 2;
   optional uint64 end_timestamp = 3;
   optional bytes subspace_key = 5; // Subkey within the index's primary and secondary subspaces.
   optional int32 nlevels = 6;
}
